<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.studios.truhbel.forthearts.Artist.CreateArtistAccActivity">

    <EditText
        android:id="@+id/et_name"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="@dimen/margin_inputs"
        />

    <EditText
        android:id="@+id/et_studio_name"
        android:layout_below="@id/et_name"
        android:hint="@string/studio_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_inputs"
        />

    <EditText
        android:id="@+id/et_city"
        android:layout_below="@id/et_studio_name"
        android:hint="@string/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_inputs"
        />

    <EditText
        android:id="@+id/et_state"
        android:layout_below="@id/et_city"
        android:hint="@string/state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_inputs"
        />

    <TextView
        android:id="@+id/spinner_tv"
        android:layout_below="@id/et_state"
        android:text="@string/lable_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        />

    <Spinner
        android:id="@+id/subject_spinner"
        android:layout_below="@id/spinner_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spinner_margin"
        />

    <Button
        android:id="@+id/confirm_btn"
        android:layout_below="@id/subject_spinner"
        android:text="@string/confirm"
        android:textSize="@dimen/string_sz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</RelativeLayout>